[gd_scene load_steps=39 format=3 uid="uid://cbqvu0uo5eaku"]

[ext_resource type="Script" path="res://systems/card_combat/card_battle.gd" id="1_qlibh"]
[ext_resource type="Script" path="res://systems/card_combat/combat_phases/start_phase.gd" id="2_u0ed7"]
[ext_resource type="Script" path="res://systems/card_combat/combat_phases/friendly_placement_phase.gd" id="3_r45qr"]
[ext_resource type="Script" path="res://systems/card_combat/combat_phases/friendly_attack_phase.gd" id="4_1hpd2"]
[ext_resource type="PackedScene" uid="uid://d04yhti50qih4" path="res://assets/vfx/big_blob.tscn" id="5_j4dxn"]
[ext_resource type="Script" path="res://systems/card_combat/combat_phases/friendly_karma_phase.gd" id="6_8rynh"]
[ext_resource type="PackedScene" uid="uid://b84sklippd45m" path="res://assets/vfx/karma_particle.tscn" id="7_tb27i"]
[ext_resource type="Script" path="res://systems/card_combat/enemy_movement_phase.gd" id="8_tvxa6"]
[ext_resource type="Script" path="res://systems/card_combat/combat_phases/enemy_attack_phase.gd" id="9_00blp"]
[ext_resource type="Script" path="res://systems/card_combat/combat_phases/enemy_karma_phase.gd" id="10_smfek"]
[ext_resource type="Script" path="res://systems/card_combat/combat_phases/enemy_placement_phase.gd" id="11_ig60h"]
[ext_resource type="Script" path="res://systems/card_combat/combat_phases/end_phase.gd" id="12_yveob"]
[ext_resource type="Resource" uid="uid://bey7oy462yo2s" path="res://data/player/debug_player.tres" id="13_78mp4"]
[ext_resource type="Texture2D" uid="uid://bqaoik2rrtkum" path="res://assets/sprites/backgrounds/battle_background.jpg" id="14_f2v0e"]
[ext_resource type="Script" path="res://systems/card_combat/game_board.gd" id="15_o1lj7"]
[ext_resource type="PackedScene" uid="uid://dgdblxt0g8doq" path="res://systems/card_combat/cards/combat_card.tscn" id="16_oct4e"]
[ext_resource type="PackedScene" uid="uid://eo8nyis4kslg" path="res://systems/card_combat/old_card_player.tscn" id="17_jufcq"]
[ext_resource type="PackedScene" uid="uid://cbbtdvgdt63fh" path="res://systems/ui/tooltips/show_tooltip.tscn" id="18_qoibv"]
[ext_resource type="Script" path="res://systems/ui/tooltips/show_tooltip.gd" id="19_0d1jo"]
[ext_resource type="PackedScene" uid="uid://dsd1p31nygox4" path="res://systems/card_combat/old_enemy_player.tscn" id="20_yxy8n"]
[ext_resource type="PackedScene" uid="uid://d4mlm5draiaf7" path="res://systems/card_combat/battle_log.tscn" id="21_jrpou"]

[sub_resource type="Resource" id="Resource_26qbp"]
script = ExtResource("2_u0ed7")
place_enemy_cards_before_first_turn = true

[sub_resource type="Resource" id="Resource_7owng"]
script = ExtResource("3_r45qr")

[sub_resource type="Resource" id="Resource_4waph"]
script = ExtResource("4_1hpd2")

[sub_resource type="Resource" id="Resource_611yk"]
script = ExtResource("6_8rynh")
karma_blob = ExtResource("5_j4dxn")
small_blob = ExtResource("7_tb27i")
karma_duration = 2.3
karma_delay = 0.6
blob_move = 20

[sub_resource type="Resource" id="Resource_d62ed"]
script = ExtResource("8_tvxa6")

[sub_resource type="Resource" id="Resource_4sdqi"]
script = ExtResource("9_00blp")

[sub_resource type="Resource" id="Resource_5dgv3"]
script = ExtResource("10_smfek")
karma_blob = ExtResource("5_j4dxn")
small_blob = ExtResource("7_tb27i")
karma_duration = 2.3
karma_delay = 0.6
blob_move = 20

[sub_resource type="Resource" id="Resource_n6smt"]
script = ExtResource("11_ig60h")

[sub_resource type="Resource" id="Resource_3vjfy"]
script = ExtResource("12_yveob")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1vun5"]
texture = ExtResource("14_f2v0e")
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hxg0t"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2t3xx"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="InputEventKey" id="InputEventKey_thsaf"]
device = -1
ctrl_pressed = true
keycode = 68

[sub_resource type="InputEventKey" id="InputEventKey_kwdgl"]
device = -1
ctrl_pressed = true
keycode = 4194312

[sub_resource type="InputEventKey" id="InputEventKey_vvn32"]
device = -1
keycode = 4194312

[sub_resource type="Shortcut" id="Shortcut_udv11"]
events = [SubResource("InputEventKey_thsaf"), SubResource("InputEventKey_kwdgl"), SubResource("InputEventKey_vvn32")]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gy01y"]
bg_color = Color(1, 0.505882, 0.137255, 1)

[node name="CardBattle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qlibh")
phases = Array[Resource("res://systems/card_combat/combat_phases/combat_phase.gd")]([SubResource("Resource_26qbp"), SubResource("Resource_7owng"), SubResource("Resource_4waph"), SubResource("Resource_611yk"), SubResource("Resource_d62ed"), SubResource("Resource_4sdqi"), SubResource("Resource_5dgv3"), SubResource("Resource_n6smt"), SubResource("Resource_3vjfy")])
phase_end_delay = 0.2
debug_player_data = ExtResource("13_78mp4")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_1vun5")

[node name="GameBoard" type="VBoxContainer" parent="." node_paths=PackedStringArray("enemy_player", "player")]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.833
offset_top = 51.0
offset_bottom = 51.36
grow_horizontal = 2
mouse_filter = 2
theme_override_constants/separation = 91
alignment = 1
script = ExtResource("15_o1lj7")
combat_card_prefab = ExtResource("16_oct4e")
enemy_player = NodePath("../EnemyPlayer")
player = NodePath("../CardPlayer")
tile_disabled_color = Color(0.231373, 0.196078, 0.184314, 1)
tile_interactible_color = Color(0.341176, 0.294118, 0.278431, 1)
tile_hovered_color = Color(0.537255, 0.47451, 0.454902, 1)

[node name="EnemyTiles" type="VBoxContainer" parent="GameBoard"]
layout_mode = 2
theme_override_constants/separation = 29

[node name="Row1" type="HBoxContainer" parent="GameBoard/EnemyTiles"]
layout_mode = 2
theme_override_constants/separation = 60
alignment = 1

[node name="Panel" type="Panel" parent="GameBoard/EnemyTiles/Row1"]
custom_minimum_size = Vector2(164, 257)
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_hxg0t")

[node name="Panel2" type="Panel" parent="GameBoard/EnemyTiles/Row1"]
custom_minimum_size = Vector2(164, 257)
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_hxg0t")

[node name="Panel3" type="Panel" parent="GameBoard/EnemyTiles/Row1"]
custom_minimum_size = Vector2(164, 257)
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_hxg0t")

[node name="Panel4" type="Panel" parent="GameBoard/EnemyTiles/Row1"]
custom_minimum_size = Vector2(164, 257)
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_hxg0t")

[node name="Panel5" type="Panel" parent="GameBoard/EnemyTiles/Row1"]
custom_minimum_size = Vector2(164, 257)
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_hxg0t")

[node name="Row2" type="HBoxContainer" parent="GameBoard/EnemyTiles"]
layout_mode = 2
theme_override_constants/separation = 60
alignment = 1

[node name="Panel" type="Panel" parent="GameBoard/EnemyTiles/Row2"]
custom_minimum_size = Vector2(164, 257)
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_hxg0t")

[node name="Panel2" type="Panel" parent="GameBoard/EnemyTiles/Row2"]
custom_minimum_size = Vector2(164, 257)
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_hxg0t")

[node name="Panel3" type="Panel" parent="GameBoard/EnemyTiles/Row2"]
custom_minimum_size = Vector2(164, 257)
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_hxg0t")

[node name="Panel4" type="Panel" parent="GameBoard/EnemyTiles/Row2"]
custom_minimum_size = Vector2(164, 257)
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_hxg0t")

[node name="Panel5" type="Panel" parent="GameBoard/EnemyTiles/Row2"]
custom_minimum_size = Vector2(164, 257)
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_hxg0t")

[node name="PlayerTiles" type="HBoxContainer" parent="GameBoard"]
layout_mode = 2
theme_override_constants/separation = 60
alignment = 1

[node name="Panel" type="Panel" parent="GameBoard/PlayerTiles"]
self_modulate = Color(0.341176, 0.294118, 0.278431, 1)
custom_minimum_size = Vector2(164, 257)
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_2t3xx")

[node name="Panel2" type="Panel" parent="GameBoard/PlayerTiles"]
self_modulate = Color(0.341176, 0.294118, 0.278431, 1)
custom_minimum_size = Vector2(164, 257)
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_2t3xx")

[node name="Panel3" type="Panel" parent="GameBoard/PlayerTiles"]
self_modulate = Color(0.341176, 0.294118, 0.278431, 1)
custom_minimum_size = Vector2(164, 257)
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_2t3xx")

[node name="Panel4" type="Panel" parent="GameBoard/PlayerTiles"]
self_modulate = Color(0.341176, 0.294118, 0.278431, 1)
custom_minimum_size = Vector2(164, 257)
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_2t3xx")

[node name="Panel5" type="Panel" parent="GameBoard/PlayerTiles"]
self_modulate = Color(0.341176, 0.294118, 0.278431, 1)
custom_minimum_size = Vector2(164, 257)
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_2t3xx")

[node name="CardPlayer" parent="." instance=ExtResource("17_jufcq")]
layout_mode = 1

[node name="CardDeletionButton" type="CheckButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 28.0
offset_top = 651.0
offset_right = 230.0
offset_bottom = 682.0
scale = Vector2(1.3, 1.3)
shortcut = SubResource("Shortcut_udv11")
text = "Card Deletion Mode"

[node name="ShowTooltip" parent="CardDeletionButton" instance=ExtResource("18_qoibv")]
layout_mode = 1
text = "Toggle the delete button on all active cards of your side of the board.
 When deleting a card via their delete button you will gain their karma value once and then the card will be permanently deleted."

[node name="EndTurnButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.389
anchor_right = 1.0
anchor_bottom = 0.429
offset_left = -277.0
offset_top = -0.120026
offset_right = -84.0
offset_bottom = -0.320007
theme_override_colors/font_color = Color(0.0745098, 0.0745098, 0.0745098, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_gy01y")
text = "End Turn
"

[node name="ShowTooltip" type="Control" parent="EndTurnButton"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("19_0d1jo")
title = "End Turn Button"
text = "Once you press this the following will happen:
1. Your cards attack from left to right.
2. The combined karma value of your cards is added to your karma.
3. Enemy cards move down if possible.
4. Enemy cards attack from left to rigtht.
5. The next turn starts and you'll draw a card."

[node name="EnemyPlayer" parent="." instance=ExtResource("20_yxy8n")]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 30.0
offset_right = -15.0
offset_bottom = 0.0
grow_horizontal = 0

[node name="CurrentPhaseLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 982.0
offset_right = 331.0
offset_bottom = 1060.0
theme_override_font_sizes/font_size = 19

[node name="BattleLog" parent="." instance=ExtResource("21_jrpou")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 11.0
offset_right = -1577.0
offset_bottom = -1037.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="card_drag_ended" from="CardPlayer" to="GameBoard" method="_on_card_relased"]
[connection signal="card_drag_started" from="CardPlayer" to="GameBoard" method="_on_card_dragged"]
[connection signal="toggled" from="CardDeletionButton" to="GameBoard" method="_on_card_deletion_button_toggled"]
[connection signal="pressed" from="EndTurnButton" to="." method="_on_end_turn_button_pressed"]
